fix: login-area gap spacing

--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -21,7 +21,7 @@
 .app-header__login-area {
     align-items: center;
     display: flex;
-    gap: 100px;
+    gap: 25px;
 }
 
 .app-header__login-area__username {
